# Miner-Analyzer

./: .gitattributes  .gitignore  EVE Miner Analyzer.bat  GOOD_PRACTICES.md  JAVA_PLUGINS_GUIDE.md  README.md  README_TAURI.md  SETUP.md  build.gradle  eve-miner-analyzer.bat  index.html  package-lock.json  package.json  settings.gradle  tsconfig.json
.github/workflows/: build-and-publish.yml  release.yml
java/: EveMinerAnalyzer.java  README.md  build.bat  create_executable.bat
powershell/: README.md  roll-analyzer-modulated-realworld.ps1  roll-analyzer-modulated.ps1  roll_analyer_modulated.ps1  roll_analyzer_modulated_realworld.ps1  rolled Ore Strip miner.ps1
python/: README.md  eve_miner_analyzer.py  requirements.txt
scripts/: EVE Miner Analyzer.bat  update-version.sh
scripts/java/: MANIFEST.MF  README.md  build.bat  create_executable.bat
scripts/powershell/: README.md  mutaplasmid_odds_calculator.ps1
src/: App.tsx  index.css  version.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: clipboard.json  dialog.json  filesystem.json  shell.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: lib.rs  log_parser.rs  main.rs
src/components/: AnalysisDisplay.tsx  ExportFormatDialog.tsx  LogView.tsx  MainAnalyzer.tsx  RollSimulator.tsx  SettingsDialog.tsx  SkillLevelsDialog.tsx  TierRangesDialog.tsx  UpdateAvailableDialog.tsx
src/components/ui/: accordion.tsx  button.tsx  calendar.tsx  card.tsx  dialog.tsx  input.tsx  textarea.tsx  (+1 more)
src/hooks/: useVersionCheck.ts
src/types/: index.ts
src/workers/: simulatorWorker.ts
(+28 files in other folders)
