[package]
name = "eve-miner-analyzer"
version = "2.0.1"
description = "EVE Online Strip Miner Roll Analyzer"
authors = ["you"]
edition = "2021"

[lib]
name = "eve_miner_analyzer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
